# mbl2pc

./: .env.sample  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SHIFT_LEFT_SUMMARY.md  TEST_FIXES_SUMMARY.md  docker-compose.yml  main.py  mypy-requirements.txt  package-lock.json  playwright.spec.js  pyproject.toml  render.yaml  requirements-dev.txt  requirements.in  requirements.txt  send.html  test_api.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  ONBOARDING.md  TROUBLESHOOTING.md
src/mbl2pc/: config.py  main.py  schemas.py
src/mbl2pc/api/: __init__.py  auth.py  chat.py
src/mbl2pc/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  storage.py
static/: send.html
test-results/: .last-run.json
test-results/playwright-mbl2pc-Chat-UI--1d975-for-non-image-drag-and-drop/: error-context.md
test-results/playwright-mbl2pc-Chat-UI-can-upload-an-image-file/: error-context.md
tests/: conftest.py
tests/e2e/: conftest.py  test_api_endpoints.py  test_webapp.py
tests/integration/: conftest.py  test_auth_api.py  test_chat_api.py
tests/unit/: test_chat_logic.py  test_config.py  test_storage.py
